--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "framer-motion": "^11.3.18",
+    "framer-motion": "^12.0.0-alpha.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
